2007-03-17  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valacodegnerator.vala,
	  vala/valaclassregisterfunction.vala,
	  vala/valainterfaceregisterfunction.vala,
	  vala/valatyperegisterfunction.vala, vala/valacodecontext.vala: support
	  creating GTypeModule-based plug-ins with the ModuleInit attribute
	* vala/parser.y, vala/valacodegenerator.vala, vala/valaclass.vala:
	  support static classes
	* vapi/glib-2.0.vala: add TypePlugin and TypeModule

2007-03-17  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: accept attributes without parentheses
	* vala/valainterfacewriter.vala: don't write weak keyword for value
	  types
	* vapi/atk.vala, vapi/cairo.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala,
	  vapi/libxml-2.0.vala, vapi/pango.vala: update

2007-03-17  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodeunaryexpression.vala: support pointer indirections
	* vala/parser.y, vala/valacodevisitor.vala,
	  vala/valasymbolresolver.vala, vala/valasemanticanalyzer.vala,
	  vala/valamemorymanager.vala, vala/valacodegenerator.vala,
	  vala/valaaddressofexpression.vala, vala/valadatatype.vala,
	  vala/valapointer.vala, vala/valapointerindirection.vala,
	  vala/valatypereference.vala: support pointer-types, pointer
	  indirections, and address-of expressions
	* vala/vala.h, vala/Makefile.am: update

2007-03-16  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support weak keyword in local variable declarations
	* vapi/glib-2.0.vala: improve GError support

2007-03-16  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: support disconnecting signals, based on
	  patch by Alexandre Moreira
	* tests/test-018.vala, tests/test-018.out: test disconnecting signals

2007-03-16  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: fix null pointer dereference when
	  emitting signals

2007-03-16  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: default to strong references for method return types