@@ -1,0 +1,2 @@
+Jürg Billeter <j@bitron.ch>
+Raffaele Sandrini <rasa@gmx.ch>
