@@ -11,4 +11,7 @@ SUBDIRS = \
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = vala-1.0.pc
 
-EXTRA_DIST = vala-1.0.pc.in
+EXTRA_DIST = \
+	MAINTAINERS \
+	vala-1.0.pc.in \
+	$(NULL)
