@@ -21,7 +21,9 @@ valac.vala.stamp: $(filter %.vala,$(valac_SOURCES))
 	$(VALAC) --vapidir $(srcdir)/../vapi --vapidir ../ccode --pkg ccode --vapidir ../vala --pkg vala --pkg config $^
 	touch $@
 
-valac_CPPFLAGS = -include config.h
+valac_CPPFLAGS = \
+	-include config.h \
+	-DPACKAGE_DATADIR=\"$(pkgdatadir)\"
 
 valac_LDADD = \
 	$(GLIB_LIBS) \
