@@ -22,5 +22,6 @@
 
 [CCode (cprefix = "", cheader_filename = "config.h")]
 namespace Config {
-        public const string PACKAGE_VERSION;
+	public const string PACKAGE_VERSION;
+	public const string PACKAGE_DATADIR;
 }
